# kedro-auto-catalog

./: .kedro-auto-catalog-copier-answers.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
kedro_auto_catalog/: __about__.py  cli.py
tests/: test_dummy.py
